@@ -1,3 +1,8 @@
+2014-01-09  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c, src/plot2d.c:  Only include support for "thru" if
+	configured with --enable-backwards-compatibility
+
 2014-01-08  Thomas Bleher <tbleher@gmx.de>
 
 	* config/msvc/Makefile:  Add configuration option for compiling the qt
